[gd_scene load_steps=23 format=3 uid="uid://bxd1le34egkfo"]

[ext_resource type="Script" uid="uid://bb7nfcj2fecqw" path="res://Scripts/blue_slime.gd" id="1_g1x46"]
[ext_resource type="Texture2D" uid="uid://cu307r3gb6lon" path="res://Assets/Entities/slime.png" id="2_y8sgr"]
[ext_resource type="PackedScene" uid="uid://d3sdvmyd0t21j" path="res://Scenes/Components/movement_component.tscn" id="3_032yx"]
[ext_resource type="Texture2D" uid="uid://4kw5xv7m51l8" path="res://Assets/Effects/shadow.png" id="4_15glr"]
[ext_resource type="PackedScene" uid="uid://bsnhhntguwptg" path="res://Scenes/Components/hitbox_component.tscn" id="5_is1k4"]
[ext_resource type="Script" uid="uid://ciel526xjo22d" path="res://Scripts/hitbox_component.gd" id="6_02tk4"]
[ext_resource type="PackedScene" uid="uid://ddxqpjweuq88f" path="res://Scenes/Components/health_component.tscn" id="7_02tk4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_032yx"]
atlas = ExtResource("2_y8sgr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_15glr"]
atlas = ExtResource("2_y8sgr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7rq5"]
atlas = ExtResource("2_y8sgr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_is1k4"]
atlas = ExtResource("2_y8sgr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_02tk4"]
atlas = ExtResource("2_y8sgr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s0e8"]
atlas = ExtResource("2_y8sgr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bqke"]
atlas = ExtResource("2_y8sgr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gqltv"]
atlas = ExtResource("2_y8sgr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_unihl"]
atlas = ExtResource("2_y8sgr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s4a3"]
atlas = ExtResource("2_y8sgr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu2xe"]
atlas = ExtResource("2_y8sgr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_povjh"]
atlas = ExtResource("2_y8sgr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rl07c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_032yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15glr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7rq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is1k4")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_02tk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s0e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bqke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gqltv")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_unihl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s4a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu2xe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_povjh")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_032yx"]
radius = 270.15

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e7rq5"]
radius = 6.0
height = 18.0

[node name="Blue Slime" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_g1x46")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rl07c")
animation = &"walk"
autoplay = "idle"
frame_progress = 0.294583

[node name="PatrolArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PatrolArea"]
visible = false
shape = SubResource("CircleShape2D_032yx")

[node name="Movement Component" parent="." node_paths=PackedStringArray("BODY") instance=ExtResource("3_032yx")]
BODY = NodePath("..")
MOVEMENT_SPEED = 1.0
FRICTION = 0.95

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_e7rq5")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.196078)
z_index = -1
position = Vector2(0.500002, 7)
scale = Vector2(0.84375, 0.84375)
texture = ExtResource("4_15glr")

[node name="Hitbox Component" parent="." node_paths=PackedStringArray("healthComponent", "collisionObject") instance=ExtResource("5_is1k4")]
script = ExtResource("6_02tk4")
healthComponent = NodePath("../Health Component")
collisionObject = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox Component"]
visible = false
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_e7rq5")

[node name="Health Component" parent="." instance=ExtResource("7_02tk4")]

[connection signal="body_entered" from="PatrolArea" to="." method="_on_patrol_area_body_entered"]
[connection signal="body_exited" from="PatrolArea" to="." method="_on_patrol_area_body_exited"]
